--- a/index.html
+++ b/index.html
@@ -1,7 +1,51 @@
 <!Doctype html>
   <html>
-    <head></head>
+    <head>
       <title>Secret Agent Supply</title>
-        <body>
-        </bod>
+        <link href="reset.css" type="text/css" rel="stylesheet">
+        <link href="style.css" type="text/css" rel="stylesheet">
+    </head>
+      <body>
+
+        <div class="header">
+          <img src="./resources/images/logo.png"/>
+            <h1>SECRET AGENT SUPPLY INC.</h1>
+          </div>
+
+        <div class="main">
+          <img src="./resources/images/moto.jpeg"/>
+            <p>NEW ARRIVAL</p>
+              <h1>SPORT BIKE AND MOTORCYCLES</h1>
+        </div>
+
+        <div class="menu">
+          <nav>
+            <span>EyeWear<span>
+            <span>Apparel</span>
+            <span>Gadgets</span>
+            <span>Vehicles</span>
+            <span>Classes</span>
+            <spam>Contact</span>
+          </nav>
+        </div>
+
+        <div class="gadgets">
+            <img src="./resources/images/pen.png"/>
+              <p>Exploding Pen</p>
+            <img src="./resources/images/watch.png"/>
+              <p>Cellular Watch</p>
+            <img src="./resources/images/glasses.png"/>
+              <p>Thermal Glasses</p>
+
+        <div class="info">
+          <p>Location</p>
+            <p>-47.346436, 84.32354</p>
+          <p>Hours</p>
+            <p>0800 - 1800</p>
+          </div>
+
+        <footer>
+          <p>&copy; Copyright Secret Agent Supply Inc.</p>
+          </footer>
+      </bod>
   </html>
