--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <html>
     <head>
       <title>Secret Agent Supply</title>
-        <link href="reset.css" type="text/css" rel="stylesheet">
-        <link href="style.css" type="text/css" rel="stylesheet">
+        <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
+        <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
       <body>
 
@@ -13,9 +13,10 @@
           </div>
 
         <div class="main">
-          <img src="./resources/images/moto.jpeg"/>
+          <div class="main-text">
             <p>NEW ARRIVAL</p>
               <h1>SPORT BIKE AND MOTORCYCLES</h1>
+            </div>
         </div>
 
         <div class="menu">
@@ -30,19 +31,36 @@
         </div>
 
         <div class="gadgets">
+          <div class="gadget-box">
             <img src="./resources/images/pen.png"/>
-              <p>Exploding Pen</p>
+              <div class="label">
+                <p>Exploding Pen</p>
+              </div>
+            </div>
+          <div class="gadget-box">
             <img src="./resources/images/watch.png"/>
-              <p>Cellular Watch</p>
+              <div class="label">
+                <p>Cellular Watch</p>
+              </div>
+          </div>
+          <div class="gadget-box">
             <img src="./resources/images/glasses.png"/>
-              <p>Thermal Glasses</p>
+              <div class="label">
+                <p>Thermal Glasses</p>
+              </div>
+            </div>
+          </div>
 
         <div class="info">
-          <p>Location</p>
-            <p>-47.346436, 84.32354</p>
-          <p>Hours</p>
-            <p>0800 - 1800</p>
+          <div class="info-location">
+            <h1>Location</h1>
+              <p>-47.346436, 84.32354</p>
           </div>
+          <div class="info-hours">
+            <h1>Hours</h1>
+              <p>0800 - 1800</p>
+            </div>
+        </div>
 
         <footer>
           <p>&copy; Copyright Secret Agent Supply Inc.</p>
