Final code for varios screens.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         <div class="menu">
           <nav>
+            <span class="item-menu">Menu</span>
             <span>EyeWear<span>
             <span>Apparel</span>
             <span>Gadgets</span>
@@ -37,13 +38,13 @@
                 <p>Exploding Pen</p>
               </div>
             </div>
-          <div class="gadget-box">
+          <div class="gadget-box" id="watch">
             <img src="./resources/images/watch.png"/>
               <div class="label">
                 <p>Cellular Watch</p>
               </div>
           </div>
-          <div class="gadget-box">
+          <div class="gadget-box" id="shades">
             <img src="./resources/images/glasses.png"/>
               <div class="label">
                 <p>Thermal Glasses</p>
